# autonomous-robotics-perception

./: .gitignore  Dockerfile  README.md  create_video.sh  download_rosbag.sh  requirements.txt  start_cpu.sh  start_gpu.sh
src/ros2_image_processor/: package.xml  setup.py
study_0254/: Dockerfile  Dockerfile.gpu  QUICK_START.md  README.md  docker-compose-gpu.yml  requirements.txt  start_cpu.sh  start_gpu.sh
study_0254/rosbag2_2025_06_16-15_16_29/: metadata.yaml
study_0630/: batch_stitching_with_homography.py  demo.ipynb  demo.py  make_video.py  run_stitching_pipeline.py  superglue_matching.py
study_0630/dummy/: demo_composition.py  export_onnx.py  export_onnx_gpt.py  quantize_model.py  (+6 more)
study_0702/: Dockerfile  build.sh  docker-compose.yml  download_vltseg.sh  requirements.txt
study_0702_2047/: Dockerfile  test_5_images.sh
study_0702_og/: .gitignore  Dockerfile  check_bag.py  docker-compose.yml  requirements.txt  start_test copy.sh  start_test.sh  test_5_images copy.sh
study_0702_og/src/ros2_image_processor/: CMakeLists.txt
study_0702_og/src/ros2_image_processor/launch/: visualization.launch.py
study_0702_og/src/ros2_image_processor/ros2_image_processor/: image_processor_node.py  image_saver_node.py
study_1156/: Dockerfile  README.md  docker_start.sh  requirements.txt  start_test.sh  test_semantic_segmentation.py  test_setup.py
study_simple_Seg/: Dockerfile  IMPLEMENTATION_SUMMARY.md  requirements.txt  start_test.sh  test_semantic_segmentation.py
study_stitching/: 5_images.sh  QUICK_START.md  README.md  start_test.sh
tests/: test_runtime_config.py
(+89 files in other folders)
